3-thequoter-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thequoter-v1-sharedlb
  labels:
    app: thequoter
spec:
  containers:
  - name: thequoter
    image: pastjean/thequoter:v1
    ports:
    - name: http
      containerPort: 8080
