4-thequoter-bluegreen-1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thequoter-v1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: thequoter-v1
    spec:
      containers:
      - name: thequoter
        image: pastjean/thequoter:v1
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
