5-thequoter-slow-progressive-automatic.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thequoter
spec:
  replicas: 3
  minReadySeconds: 30
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3  
  template:
    metadata:
      labels:
        app: thequoter
    spec:
      containers:
      - name: thequoter
        image: pastjean/thequoter:v1
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
