2-thequoter-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thequoter-v1
  labels:
    app: thequoter-v1
spec:
  containers:
  - name: thequoter
    image: pastjean/thequoter:v1
    ports:
    - name: http
      containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: thequoter-v1
spec:
  selector:
    app: thequoter-v1
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
