5-thequoter.yaml
kind: Service
apiVersion: v1
metadata:
  name: thequoter
spec:
  selector:
    app: thequoter
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: http
