0-thequoter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thequoter
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: thequoter
          servicePort: http
